added rendering INVENTORY.md

--- a/apim-system/aws/single-node/ansible/roles/platform-api/templates/platform-api-docker-compose.yml.j2
+++ b/apim-system/aws/single-node/ansible/roles/platform-api/templates/platform-api-docker-compose.yml.j2
@@ -39,7 +39,7 @@ services:
       #user-name of platform api (as defined in organization_users.json)
       - solace_spa_user={{solace_spa_user}}
       #user-password of platform api (as defined in organization_users.json)
-      - solace_spa_password={{solace_spa_password}}
+      - solace_spa_password={{solace_spa_user}}
       #admin-name of platform api
       - solace_spa_adminuser={{solace_spa_adminuser}}
       #admin-password of platform api
