--- a/apim-system/aws/wso2-self-contained/ansible/roles/platform-api/templates/platform-api-docker-compose.yml.j2
+++ b/apim-system/aws/wso2-self-contained/ansible/roles/platform-api/templates/platform-api-docker-compose.yml.j2
@@ -11,6 +11,31 @@ services:
       options:
         awslogs-group: {{aws_log_group}}
         tag: mongodb
+  mysql:
+    image: mysql:5.7
+    restart: unless-stopped
+    environment:
+      MYSQL_DATABASE: 'db'
+      # So you don't have to use root, but you can if you like
+      MYSQL_USER={{mysql_user}}
+      # You can use whatever password you like
+      MYSQL_PASSWORD={{mysql_password}}
+      # Password for root access
+      MYSQL_ROOT_PASSWORD={{mysql_root_password}}
+    ports:
+      # <Port exposed> : < MySQL Port running inside container>
+      - '3306:3306'
+    expose:
+      # Opens port 3306 on the container
+      - '3306'
+      # Where our data will be persisted
+    volumes:
+      - /data/mysql:/data/mysql
+    logging:
+      driver: awslogs
+      options:
+        awslogs-group: {{aws_log_group}}
+        tag: mysql
   platform-api-server:
     container_name: platform-api-server-2
     links:
