--- a/apim-system/aws/wso2-self-contained/ansible/roles/platform-api/templates/platform-api-docker-compose.yml.j2
+++ b/apim-system/aws/wso2-self-contained/ansible/roles/platform-api/templates/platform-api-docker-compose.yml.j2
@@ -15,13 +15,13 @@ services:
     image: mysql:5.7
     restart: unless-stopped
     environment:
-      MYSQL_DATABASE: 'db'
+      - MYSQL_DATABASE: 'db'
       # So you don't have to use root, but you can if you like
-      MYSQL_USER={{mysql_user}}
+      - MYSQL_USER={{mysql_user}}
       # You can use whatever password you like
-      MYSQL_PASSWORD={{mysql_password}}
+      - MYSQL_PASSWORD={{mysql_password}}
       # Password for root access
-      MYSQL_ROOT_PASSWORD={{mysql_root_password}}
+      - MYSQL_ROOT_PASSWORD={{mysql_root_password}}
     ports:
       # <Port exposed> : < MySQL Port running inside container>
       - '3306:3306'
