--- a/apim-system/aws/single-node/ansible/roles/platform-api/templates/organization_users.json.j2
+++ b/apim-system/aws/single-node/ansible/roles/platform-api/templates/organization_users.json.j2
@@ -1,3 +1,5 @@
 {
-	"{{item.name}}": "{{item.password}}"
+    {% for item in solace_spa_users %}
+	    "{{item.name}}":"{{item.password}}"
+	{% endfor %}
 }
