--- a/apim-system/aws/wso2-self-contained/ansible/roles/platform-api/templates/organization_users.json.j2
+++ b/apim-system/aws/wso2-self-contained/ansible/roles/platform-api/templates/organization_users.json.j2
@@ -1,5 +1,6 @@
 {
     {% for item in solace_spa_users %}
 	    "{{item.name}}":"{{item.password}}"
+	    {{ ", " if not loop.last else "" }}
 	{% endfor %}
 }
