--- a/apim-system/aws/single-node/ansible/roles/platform-api/templates/organization_users.json.j2
+++ b/apim-system/aws/single-node/ansible/roles/platform-api/templates/organization_users.json.j2
@@ -1,5 +1,5 @@
 {
-    {% for item in solace_spa_users %}
-	    "{{item.name}}":"{{item.password}}"
-	{% endfor %}
+{% for item in solace_spa_users %}
+   "{{item.name}}":"{{item.password}}"{{ ", " if not loop.last else "" }}
+{% endfor %}
 }
