fixed INVENTORY.md of single-node

--- a/apim-system/aws/single-node/ansible/templates/INVENTORY.md.j2
+++ b/apim-system/aws/single-node/ansible/templates/INVENTORY.md.j2
@@ -14,7 +14,7 @@ Inventory of Solace IoT-Team Demo Single-Node Demo
 | Entity |  Endpoint | Notes |
 |--------|------------|-------|
 | Portal | http://{{platform_api_host_ip}} | Username: {{solace_portal_login_user}} Password: {{solace_portal_login_password}} |
-| Platform-API | http://{{platform_api_host_ip}}:3000/v1 |Admin-User: {{solace_spa_adminuser}} Password: {{solace_spa_adminpassword}} <br/> User: {{solace_spa_user}} Password: {{solace_spa_user}} |
+| Platform-API | http://{{platform_api_host_ip}}:3000/v1 |Admin-User: {{solace_spa_adminuser}} Password: {{solace_spa_adminpassword}} <br/> User: {{solace_spa_user}} Password: {{solace_spa_password}} |
 | AWS-Host | {{platform_api_host_ip}} <br/> {{platform_api_host_dns}} | AWS EC2 Box of Single-Node setup <br> Linux Login: `ubuntu`|
 
 ### Reference
