fixed INVENTORY.md of single-node

--- a/apim-system/aws/wso2-self-contained/ansible/templates/INVENTORY.md.j2
+++ b/apim-system/aws/wso2-self-contained/ansible/templates/INVENTORY.md.j2
@@ -18,7 +18,7 @@ Inventory of Solace IoT-Team Demo Single-Node Demo
 | Entity |  Endpoint | Notes |
 |--------|------------|-------|
 | Portal | http://{{platform_api_host_ip}} | Username: {{solace_portal_login_user}} Password: {{solace_portal_login_password}} |
-| Platform-API Doc and Spec| http://{{platform_api_host_ip}}:3000 |Admin-User: {{solace_spa_adminuser}} Password: {{solace_spa_adminpassword}} <br/> User: {{solace_spa_user}} Password: {{solace_spa_user}} |
+| Platform-API Doc and Spec| http://{{platform_api_host_ip}}:3000 |Admin-User: {{solace_spa_adminuser}} Password: {{solace_spa_adminpassword}} <br/> User: {{solace_spa_user}} Password: {{solace_spa_password}} |
 | MongoDB | n/a | not accessible outside Docker, no ports exposed |
 | MySQL | {{box_1_private_ip}}:3306 (only accessible within VPC)| Mysql-user: {{mysql_user}} Mysql-password: {{mysql_password}}, Mysql-root-password: {{mysql_root_password}} \
 |WSO2-IdentityServer | TBD | TBD |
