adjusted to apim-connector

--- a/apim-system/aws/single-node/ansible/roles/platform-api/templates/platform-api-docker-compose.yml.j2
+++ b/apim-system/aws/single-node/ansible/roles/platform-api/templates/platform-api-docker-compose.yml.j2
@@ -1,8 +1,8 @@
 version: "3.3"
 services:
-  platform-api-server:
-    container_name: platform-api-server-2
-    image: solaceiotteam/platform-api-server:{{platform_api_version}}
+  apim-connector:
+    container_name: apim-connector
+    image: solaceiotteam/apim-connector-server:{{apim_connector_version}}
     ports:
       - 3000:3000
     volumes:
@@ -14,13 +14,20 @@ services:
       - APP_ID=platform-api
       - FILE_USER_REGISTRY=/platform-api-server/data/organization_users.json
       - PLATFORM_PORT=3000
-      - ADMIN_USER={{solace_spa_adminuser}}
-      - ADMIN_PASSWORD={{solace_spa_adminpassword}}
+      - AUTH_EXTRACTION_USER_PRINCIPAL=${AUTH_EXTRACTION_USER_PRINCIPAL}
+      - AUTH_EXTRACTION_ORGS=${AUTH_EXTRACTION_ORGS}
+      - AUTH_EXTRACTION_ROLES=${AUTH_EXTRACTION_ROLES}
+      - AUTH_VERIFICATION_KEY=${AUTH_VERIFICATION_KEY}
+      - AUTH_VERIFICATION_ISSUER=${AUTH_VERIFICATION_ISSUER}
+      - AUTH_VERIFICATION_AUD=${AUTH_VERIFICATION_AUD}
+      - AUTH_DISCOVERY_OIDC_URL=${AUTH_DISCOVERY_OIDC_URL}
+      #- ADMIN_USER={{solace_spa_adminuser}}
+      #- ADMIN_PASSWORD={{solace_spa_adminpassword}}
     logging:
       driver: awslogs
       options:
         awslogs-group: {{aws_log_group}}
-        tag: platform-api
+        tag: apim-connector
   portal-server:
     container_name: portal-server
     links:
@@ -34,15 +41,16 @@ services:
     environment:
       #sammode=dev disables login screen
       - sammode={{sammode}}
-      #url of platform-api
-      - solace_spa_url=http://platform-api-server:3000/v1
-      #user-name of platform api (as defined in organization_users.json)
+      - samcontext={{samcontext}}
+      #url of connector-api
+      - solace_spa_url=http://apim-connector:3000/v1
+      #user-name of apim-connector (as defined in organization_users.json)
       - solace_spa_user={{solace_spa_user}}
-      #user-password of platform api (as defined in organization_users.json)
+      #user-password of apim-connector (as defined in organization_users.json)
       - solace_spa_password={{solace_spa_password}}
-      #admin-name of platform api
+      #admin-name of apim-connector
       - solace_spa_adminuser={{solace_spa_adminuser}}
-      #admin-password of platform api
+      #admin-password of apim-connector
       - solace_spa_adminpassword={{solace_spa_adminpassword}}
       #login name of portal
       - solace_portal_login_user={{solace_portal_login_user}}
