bugfix ansible template

--- a/apim-system/aws/single-node/ansible/roles/platform-api/templates/organization_users.json.j2
+++ b/apim-system/aws/single-node/ansible/roles/platform-api/templates/organization_users.json.j2
@@ -3,7 +3,7 @@
    "{{item.name}}":{
       "password":"{{item.password}}",
       "roles":[
-         "{{item.role}"
+         "{{item.role}}"
       ]
      }{{ ", " if not loop.last else "" }}
 {% endfor %}
