--- a/apim-system/aws/single-node/ansible/roles/platform-api/templates/platform-api-docker-compose.yml.j2
+++ b/apim-system/aws/single-node/ansible/roles/platform-api/templates/platform-api-docker-compose.yml.j2
@@ -14,13 +14,14 @@ services:
       - APP_ID=platform-api
       - FILE_USER_REGISTRY=/platform-api-server/data/organization_users.json
       - PLATFORM_PORT=3000
-      - AUTH_EXTRACTION_USER_PRINCIPAL=${AUTH_EXTRACTION_USER_PRINCIPAL}
-      - AUTH_EXTRACTION_ORGS=${AUTH_EXTRACTION_ORGS}
-      - AUTH_EXTRACTION_ROLES=${AUTH_EXTRACTION_ROLES}
-      - AUTH_VERIFICATION_KEY=${AUTH_VERIFICATION_KEY}
-      - AUTH_VERIFICATION_ISSUER=${AUTH_VERIFICATION_ISSUER}
-      - AUTH_VERIFICATION_AUD=${AUTH_VERIFICATION_AUD}
-      - AUTH_DISCOVERY_OIDC_URL=${AUTH_DISCOVERY_OIDC_URL}
+      - AUTH_EXTRACTION_USER_PRINCIPAL=${auth_extraction_user_principal}
+      - AUTH_EXTRACTION_ORGS=${auth_extraction_orgs}
+      - AUTH_EXTRACTION_ROLES=${auth_extraction_roles}
+      - AUTH_VERIFICATION_KEY=${auth_verification_key}
+      - AUTH_VERIFICATION_ISSUER=${auth_verification_issuer}
+      - AUTH_VERIFICATION_AUD=${auth_verification_aud}
+      - AUTH_DISCOVERY_OIDC_URL=${auth_discovery_oidc_url}
+
       #- ADMIN_USER={{solace_spa_adminuser}}
       #- ADMIN_PASSWORD={{solace_spa_adminpassword}}
     logging:
@@ -31,7 +32,7 @@ services:
   portal-server:
     container_name: portal-server
     links:
-      - platform-api-server
+      - apim-connector
     image: solaceiotteam/apim-demo-portal:{{portal_version}}
     ports:
       - 80:8090
