adjusted single-node setup

--- a/apim-system/aws/single-node/ansible/templates/INVENTORY.md.j2
+++ b/apim-system/aws/single-node/ansible/templates/INVENTORY.md.j2
@@ -7,7 +7,7 @@ Inventory of Solace IoT-Team Demo Single-Node Demo
 
 | Entity | Version | Docker-Image |
 |--------|---------|--------------|
-|Platform-API | {{platform_api_version}} | solaceiotteam/platform-api-server:{{platform_api_version}} |
+|Platform-API | {{apim_connector_version}} | solaceiotteam/apim-connector-server:{{apim_connector_version}} |
 |Portal | {{portal_version}} | solaceiotteam/apim-demo-portal:{{portal_version}} |
 
 ### Endpoints
